--- a/launch-context.json
+++ b/launch-context.json
@@ -1,7 +1,6 @@
 {
   "client_id": "6881045f-a049-4c57-9a80-0a434953bccd",
-  "redirect_uri_localhost": "http://localhost:8000",
-  "redirect_uri": "https://drdavec.github.io",
+  "redirect_uri": "https://drdavec.github.io/index.html",
   "scope": "launch openid patient/Patient.read patient/Condition.read patient/Observation.read",
   "completeInTarget": true
 }
