--- a/launch-context.json
+++ b/launch-context.json
@@ -1,6 +1,7 @@
 {
+  "response_type": "code",
   "client_id": "6881045f-a049-4c57-9a80-0a434953bccd",
-  "redirect_uri": "http://localhost:8000",
-  "scope": "launch openid patient/Patient.read patient/Condition.read patient/Observation.read",
+  "redirect_uri": "https://drdavec.github.io",
+  "scope": "openid patient/Patient.read patient/Condition.read patient/Observation.read",
   "completeInTarget": true
 }
