--- a/launch-context.json
+++ b/launch-context.json
@@ -1,5 +1,6 @@
 {
-  "clientId": "c7abfd30-85dd-42ba-9624-cbc41f5c00fc",
-  "scope": "launch launch/patient patient/Patient.read patient/Questionnaire.read patient/Questionnaire.write patient/Condition.read patient/Observation.read",
+  "client_id": "52e563ec-5df1-4b0c-bd6d-08389c5fdb59",
+  "redirect_uri": "https://drdavec.github.io",
+  "scope": "launch openid patient/Patient.read patient/Condition.read patient/Observation.read",
   "completeInTarget": true
 }
