--- a/launch-context.json
+++ b/launch-context.json
@@ -1,6 +1,6 @@
 {
-  "client_id": "52e563ec-5df1-4b0c-bd6d-08389c5fdb59",
+  "client_id": "66aeeaa7-5295-4577-8f55-e92e52eefd0f",
   "redirect_uri": "https://drdavec.github.io",
-  "scope": "launch openid patient/Patient.read patient/Condition.read patient/Observation.read",
+  "scope": "launch openid patient/Patient.read patient/Practitioner.read patient/Condition.read patient/Observation.read patient/Procedure.read patient/Goal.read",
   "completeInTarget": true
 }
